<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="counter_quantity">0</string>
    <string name="order_summary">Order Summary</string>
    <string name="button_order">Order</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
</resources>
